--- a/users/static/users/css/exercise_detail.css
+++ b/users/static/users/css/exercise_detail.css
@@ -1,4 +1,5 @@
 @import url('users/styles.css');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 
 .exercise-title {
     text-align: center;
