--- a/users/static/users/css/verification_email.css
+++ b/users/static/users/css/verification_email.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 .verify-email-body {
     display: flex;
     flex-direction: column;
