--- a/client/static/client/css/category_detail.css
+++ b/client/static/client/css/category_detail.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 .container {
     width: 100%;
     max-width: 2000px;
