--- a/client/static/client/css/client_dashboard.css
+++ b/client/static/client/css/client_dashboard.css
@@ -1,4 +1,5 @@
 @import url("client/css/navbar.css");
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 body {
     font-family: Arial, sans-serif;
     margin: 0;
