--- a/client/static/client/css/programs.css
+++ b/client/static/client/css/programs.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 h1 {
     font-size: 24px;
     color: #333;
