--- a/client/static/client/css/reports.css
+++ b/client/static/client/css/reports.css
@@ -1,7 +1,7 @@
 @import url("client/css/navbar.css");
-
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 body {
-    font-family: Arial, sans-serif;
+    font-family: Manrope, sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
