--- a/users/static/users/css/userModules.css
+++ b/users/static/users/css/userModules.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 
 body {
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Manrope', sans-serif;
 }
 
 /* Main container */
