--- a/client/templates/client/Manage_Questionnaires.html
+++ b/client/templates/client/Manage_Questionnaires.html
@@ -12,7 +12,7 @@
     <!-- Top Bar with Create Button -->
     <div class="top-bar">
         <h1>Manage Questionnaires</h1>
-        <a href="{% url 'create_questionnaire' %}" class="btn create-btn">+ Create Questionnaire</a>
+        <a href="{% url 'create_questionnaire' %}" class="btn create-btn">Create Questionnaire</a>
     </div>
 
     <!-- Search & Filter -->
