--- a/client/static/client/css/category_list.css
+++ b/client/static/client/css/category_list.css
@@ -75,22 +75,25 @@ h1 {
 }
 
 .view-btn {
-    flex: 2;
-    padding: 4px 6px;
-    border-radius: 5px;
-    text-align: center;
-    font-weight: bold;
+    font-size: 14px;
+    padding: 10px 14px;
+    background-color: white;
+    color: #F24505;
     text-decoration: none;
-    display: inline-block;
-}
-
-.view-btn {
-    background: white;
-    color: #3A88F6;
+    border-radius: 25px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+    border: 2px solid #F24505;   
+    width: 50%;
+    max-width: 100%; 
 }
 
 .view-btn:hover {
-    background: #f0f0f0;
+    background: #D43802;
+  color: white;
 }
 
 .add-card:hover {
