--- a/client/static/client/css/create_category.css
+++ b/client/static/client/css/create_category.css
@@ -8,7 +8,7 @@ body {
 
 .form-label {
     font-weight: bold;
-    color: #ff440f;
+    color: #000000;
     font-size: 20px;
 }
 
@@ -49,37 +49,46 @@ body {
 }
 
 .btn-primary {
-    background-color: #ff440f;
-    border-color: #ff440f;
-    border-radius: 50px;
-    padding: 12px 25px;
-    font-size: 16px;
+    padding: 12px 18px;
+    background: #F24505;
+    color: white;
+    font-family: Manrope;
+    border-radius: 25px;
+    font-size: 14px;
     font-weight: bold;
-    transition: background 0.3s ease-in-out, transform 0.2s;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+    border: none;
 }
 
 .btn-primary:hover {
-    background-color: #cc370d;
-    transform: translateY(-2px);
+    background: #D43802;
+    color: white;
 }
 
 .btn-secondary {
-    background-color: #6c757d;
-    border-radius: 50px;
-    padding: 12px 25px;
-    font-size: 16px;
-    transition: background 0.3s ease-in-out, transform 0.2s;
+    padding: 12px 18px;
+    background: #ddd;
+    color: black;
+    border-radius: 25px;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+    border: none;
 }
 
 .btn-secondary:hover {
-    background-color: #5a6268;
-    transform: translateY(-2px);
+    background: #bbb;
 }
 
 .create_category h2 {
     font-weight: bold;
-    font-style: italic;
-    color: #ff440f;
+    color: #000000;
     text-align: center;
     margin-bottom: 20px;
     font-size: 36px;
