--- a/client/static/client/css/view_user_response.css
+++ b/client/static/client/css/view_user_response.css
@@ -15,11 +15,12 @@ body {
 
 /* Top Bar */
 .top-bar {
-    display: flex;
-    justify-content: stretch;
+    display: column;
     align-items: center;
+    justify-content: stretch;
     margin-bottom: 20px;
-    color: #F24505;
+    margin-left: auto;
+    color: #000000;
 }
 
 /* Description Box */
