--- a/client/templates/client/client_modules.html
+++ b/client/templates/client/client_modules.html
@@ -3,14 +3,14 @@
 
 {% block content %}
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Nunito', sans-serif;
+            font-family: 'Manrope', sans-serif;
         }
 
         .content {
